Fixed bug related to map height on mobile safari

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -107,6 +107,10 @@ body {
       img {
         max-height: 27px;
       }
+
+      @media screen and (max-width: $layout-desktop-width-threshold) {
+        padding: 0 25px 0 20px;
+      }
     }
 
     .button {
@@ -740,20 +744,16 @@ body {
 
 //  -----MAP! MAP! MAP!-----
 .map {
-  height: calc(100vh - 95px);
+  height: calc(100% - 95px);
   width: 100%;
 }
 
 .map--full {
   position: absolute;
-  height: calc(100vh - 90px);
+  height: calc(100% - 90px);
   width: 100%;
   background-color: #222 !important;
   z-index: 1;
-
-  // @media screen and (min-width: $layout-desktop-width-threshold) {
-  //   width: calc(100vw - 300px);
-  // }
 }
 
 .map__cursor--pointer {
